--- a/src/index.html
+++ b/src/index.html
@@ -36,31 +36,17 @@
         </div>
     </noscript>
  <!-- END noscript -->
-    
+
 <!-- bar-long -->
 <div class="bar-long"></div>
 <!-- bar-long -->
 
-
-             .block__form
-              form(method='POST', action='javascript:void(null);')
-                // Hidden Required Fields
-                input(type='hidden', name='project_name', value='demo project_name')
-                input(type='hidden', name='admin_email', value='demo@gmail.com')
-                input(type='hidden', name='form_subject', value='demo form_subject')
-                .form_input
-                  span.field
-                    input.ferstname(type='text', name='ferstname', required='', value='', placeholder='Name')
-                .form_input
-                  span.field.phone1
-                    input.phone(type='tel', name='phone', required='', value='', placeholder='Phone')
-                .form_input
-                  span.field
-                    input.mail(type='email', name='email', required='', value='', placeholder='Email')
-                button.blue(type='submit', name='send') SEND
   
 <!-- header -->     
     <header>
+
+     Lorem ipsum dolor.
+
    
             <div class=container>
                 <div class=row>
